[gd_scene load_steps=6 format=2]

[ext_resource path="res://Stage/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/Kenney Bold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="StartButton" type="Button" parent="."]
margin_left = 144.0
margin_top = 337.0
margin_right = 304.0
margin_bottom = 367.0
custom_fonts/font = SubResource( 1 )
text = "Start Game"

[node name="GameLabel" type="Label" parent="."]
margin_left = 129.0
margin_top = 256.0
margin_right = 327.0
margin_bottom = 292.0
custom_fonts/font = SubResource( 2 )
text = "Coin Dash!"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 34.0

[node name="Score" type="Label" parent="MarginContainer"]
margin_right = 428.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="Time" type="Label" parent="MarginContainer"]
editor/display_folded = true
margin_right = 428.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 2

[node name="MessageTimer" type="Timer" parent="MarginContainer/Time"]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MarginContainer/Time/MessageTimer" to="." method="_on_MessageTimer_timeout"]
